--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ss-brain-games",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,9 +9,9 @@
     "prepublishOnly": "npm run build"
   },
   "bin": {
-     "brain-games": "dist/bin/brain-games.js"
-   },
-   "files": [
+    "brain-games": "dist/bin/brain-games.js"
+  },
+  "files": [
     "dist"
   ],
   "author": "Saloev",
@@ -21,5 +21,8 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.9"
   }
 }
