--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-lodash-fp": "^2.2.0-a1"
   },
   "dependencies": {
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   }
 }
