--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ss-brain-games",
-  "version": "1.9.0",
+  "version": "1.11.0",
   "description": "Brain-Training Games",
   "keywords": [
     "brain-games",
@@ -14,7 +14,9 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
