--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ss-brain-games",
-  "version": "1.12.0",
+  "version": "1.13.0",
   "description": "Brain-Training Games",
   "keywords": [
     "brain-games",
@@ -16,7 +16,8 @@
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
