--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ss-brain-games",
-  "version": "1.16.0",
+  "version": "1.17.0",
   "description": "Brain-Training Games",
   "keywords": [
     "brain-games",
@@ -17,7 +17,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
